[package]
name = "wwan"
version = "0.1.0"
authors = ["Rene Straub <straub@see5.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serial = "0.4.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
